--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -87,18 +87,29 @@
             android:layout_height="match_parent"
             app:srcCompat="@drawable/ic_mic_black_24dp"
             android:id="@+id/record_button"/>
-        <TextView
+
+        <ImageView
             android:layout_gravity="center"
-            android:textColor="#E90909"
             android:id="@+id/cancel_recording"
             android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginEnd="8dp"
+            android:layout_marginRight="20dp"
+            android:visibility="gone"
+
+            app:srcCompat="@drawable/ic_cancel_black_24dp" />
+
+        <TextView
+            android:id="@+id/send_audio"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/cancel"
+            android:text="send"
             android:layout_marginRight="8dp"
             android:textStyle="bold"
             android:visibility="gone"
+            android:textColor="#1ACE22"
             android:textSize="20sp"
-            android:layout_marginEnd="8dp" />
+            app:fontFamily="sans-serif-medium" />
 
     </LinearLayout>
 
