--- a/app/src/main/res/layout/fragment_card.xml
+++ b/app/src/main/res/layout/fragment_card.xml
@@ -8,7 +8,7 @@
     android:background="@color/colorBlack"
     android:orientation="vertical">
 
-    <android.support.constraint.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
+    <RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/container"
         android:layout_width="match_parent"
@@ -17,6 +17,9 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignTop="@id/frame"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
             android:layout_gravity="center"
             android:layout_marginTop="292dp"
             android:text="@string/oops_no_more_people_around_you"
@@ -25,59 +28,61 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
+
         <com.lorentzos.flingswipe.SwipeFlingAdapterView
             android:id="@+id/frame"
             android:layout_width="match_parent"
-            android:layout_height="554dp"
+            android:layout_height="match_parent"
             android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp"
             android:layout_marginTop="12dp"
             android:layout_marginEnd="8dp"
+            android:layout_above="@id/fabS"
             android:layout_marginRight="8dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
             app:rotation_degrees="15.5" />
 
-
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/fabNope"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:id="@+id/fabS"
+            android:layout_above="@id/navigation"
+            android:layout_width="match_parent"
+            android:layout_marginBottom="10dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="140dp"
-            android:layout_marginLeft="140dp"
-            android:layout_marginBottom="76dp"
-            android:foreground="@drawable/ic_nope_gif"
-            app:backgroundTint="#00000000"
-            app:elevation="2sp"
-            app:layout_constraintBottom_toBottomOf="@+id/navigation"
-            app:layout_constraintStart_toStartOf="parent" />
+            android:gravity="center_horizontal"
+            android:orientation="horizontal">
 
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/fabLike"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="140dp"
-            android:layout_marginRight="140dp"
-            android:layout_marginBottom="76dp"
-            android:foreground="@drawable/ic_like_gif"
-            app:backgroundTint="#00000000"
-            app:elevation="2sp"
-            app:layout_constraintBottom_toBottomOf="@+id/navigation"
-            app:layout_constraintEnd_toEndOf="parent" />
 
+            <android.support.design.widget.FloatingActionButton
+                android:id="@+id/fabNope"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="5dp"
+                android:src="@drawable/ic_nope"
+                app:backgroundTint="@android:color/white"
+                app:elevation="2sp"
+                app:fabSize="auto"
+                app:layout_constraintBottom_toBottomOf="@+id/navigation"
+                app:layout_constraintStart_toStartOf="parent" />
+
+            <android.support.design.widget.FloatingActionButton
+                android:id="@+id/fabLike"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:src="@drawable/ic_like"
+                app:backgroundTint="@color/colorWhite"
+                app:elevation="2sp"
+                app:layout_constraintBottom_toBottomOf="@+id/navigation"
+                app:layout_constraintEnd_toEndOf="parent" />
+        </LinearLayout>
 
         <android.support.design.widget.BottomNavigationView
             android:id="@+id/navigation"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="parent"
             android:background="#FFFFFF"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
+            android:layout_alignParentBottom="true"
             app:menu="@menu/navigation" />
-    </android.support.constraint.ConstraintLayout>
+    </RelativeLayout>
 
 
 </FrameLayout>
