--- a/app/src/main/res/layout/item_audio_message.xml
+++ b/app/src/main/res/layout/item_audio_message.xml
@@ -11,7 +11,6 @@
         android:id="@+id/audio_container"
         android:layout_width="300dp"
         android:layout_height="50dp"
-        android:background="@drawable/chat_edit_text_background"
         android:orientation="horizontal">
 
         <ImageView
@@ -19,8 +18,9 @@
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_gravity="center"
+            android:tint="@android:color/darker_gray"
             android:layout_margin="8dp"
-            android:src="@mipmap/ic_launcher" />
+            android:src="@drawable/ic_headset_black_24dp" />
 
         <ImageView
             android:id="@+id/audio_play_button"
