--- a/app/src/main/res/layout/activity_notify.xml
+++ b/app/src/main/res/layout/activity_notify.xml
@@ -33,6 +33,7 @@
         android:id="@+id/navigationNotify"
         android:layout_width="match_parent"
         android:layout_gravity="bottom|center"
+        android:background="@color/colorWhite"
         android:layout_height="wrap_content"
         android:layout_marginStart="0dp"
         android:layout_marginEnd="0dp"
